[metadata]
name = multi-usb-cam
version = 0.2.0
author = Ng Tze Kean
author_email = ngtzekean600@gmail.com
description = This is a modified package to accomodate use of dual USB cameras on Jetson Nano

[options]
python_requires = >=3.6, <=3.6.9
install_requires =
    opencv-python == 3.4.15.55
    numpy == 1.19.4
    Pillow == 8.4.0
	imutils == 0.5.4
package_dir=
    =src
packages=find:

[options.packages.find]
where=src